--- a/fixture/default/core/Mage/CmsPoll/uimap/admin/CmsPoll.yml
+++ b/fixture/default/core/Mage/CmsPoll/uimap/admin/CmsPoll.yml
@@ -110,7 +110,7 @@ new_poll:
 # Edit Poll page
 edit_poll:
     mca: poll/edit/id/%id%/
-    title: %pollName% / Polls / CMS / Magento Admin
+    title: %elementTitle% / Polls / CMS / Magento Admin
     uimap:
         form:
             tabs:
