--- a/fixture/default/core/Mage/CreditMemo/uimap/admin/CreditMemo.yml
+++ b/fixture/default/core/Mage/CreditMemo/uimap/admin/CreditMemo.yml
@@ -136,7 +136,7 @@ create_credit_memo:
 
 create_credit_memo_for_invoice:
     mca: sales_order_creditmemo/new/order_id/%id%/invoice_id/%invoice_id%/
-    title: New Memo for %invoiceId% / Credit Memos / Sales / Magento Admin
+    title: New Memo for %elementTitle% / Credit Memos / Sales / Magento Admin
     uimap: *orderCreditmemo
 
 view_credit_memo:
