--- a/fixture/default/core/Mage/AdminUser/uimap/admin/AdminUsers.yml
+++ b/fixture/default/core/Mage/AdminUser/uimap/admin/AdminUsers.yml
@@ -118,7 +118,7 @@ new_admin_user:
 # 'Edit User' page
 edit_admin_user:
     mca: permissions_user/edit/user_id/%id%/
-    title: %user_first_last_name% / Users / Permissions / System / Magento Admin
+    title: %elementTitle% / Users / Permissions / System / Magento Admin
     uimap:
         form: *adminUserForm
         buttons:
@@ -205,7 +205,7 @@ new_role:
 # 'Edit Role' page
 edit_role:
     mca: permissions_role/editrole/rid/%role_id%/
-    title: %roleName% / Roles / Permissions / System / Magento Admin
+    title: %elementTitle% / Roles / Permissions / System / Magento Admin
     uimap:
         form: &editRoleForm
             tabs:
