--- a/fixture/default/core/Mage/AttributeSet/uimap/admin/AttributeSet.yml
+++ b/fixture/default/core/Mage/AttributeSet/uimap/admin/AttributeSet.yml
@@ -74,7 +74,7 @@ add_new_attribute_set:
 
 edit_attribute_set:
     mca: catalog_product_set/edit/id/%id%/
-    title: %attributeName% / Manage Attribute Sets / Attributes / Catalog / Magento Admin
+    title: %elementTitle% / Manage Attribute Sets / Attributes / Catalog / Magento Admin
     uimap:
         form: &editAttributeSet
             fieldsets:
@@ -109,7 +109,7 @@ edit_attribute_set:
 
 edit_attribute_set_with_sharp:
     mca: catalog_product_set/edit/id/%id%/#
-    title: %attributeName% / Manage Attribute Sets / Attributes / Catalog / Magento Admin
+    title: %elementTitle% / Manage Attribute Sets / Attributes / Catalog / Magento Admin
     uimap:
         form: *editAttributeSet
         buttons: *editAttributeButtons
