--- a/fixture/default/core/Mage/Category/uimap/frontend/Category.yml
+++ b/fixture/default/core/Mage/Category/uimap/frontend/Category.yml
@@ -28,7 +28,7 @@
 #
 category_page_before_reindex:
     mca: %categoryUrl%.html
-    title: %categoryTitle%
+    title: %elementTitle%
     uimap: &categoryUIMap
         form: &categoryPage
             fieldsets:
@@ -126,17 +126,17 @@ category_page_before_reindex:
 
 category_page_after_reindex:
     mca: catalog/category/view/s/%categoryUrl%/id/%id%/
-    title: %categoryTitle%
+    title: %elementTitle%
     uimap: *categoryUIMap
 
 sub_category_page_before_reindex:
     mca: %rotCategoryUrl%/%categoryUrl%.html
-    title: %categoryTitle%
+    title: %elementTitle%
     uimap: *categoryUIMap
 
 category_page_index:
     mca: %categoryUrl%.html%categoryParam%
-    title: %categoryTitle%
+    title: %elementTitle%
     uimap:
         form: *categoryPage
         messages: *categoryPageMessages
