--- a/fixture/default/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
@@ -114,6 +114,7 @@ manage_sales_orders:
             not_valid_hostname: //li[normalize-space(@class)='error-msg' and contains(.,"appears to be a DNS hostname but cannot match against hostname schema for TLD")]
             hostname_not_valid: //li[normalize-space(@class)='error-msg' and contains(.,'appears to be a local network name but local network names are not allowed')]
             not_valid_email: //*[text()='Please enter a valid email address. For example johndoe@domain.com.']
+            order_id: "//*[contains(@class,'head-sales-order')][contains(text(), 'Order #')]"
             #confirmation
             confirmation_to_procced: This will create an offline refund. To create an online refund, open an invoice and create credit memo for it. Do you wish to proceed?
             confirmation_for_edit: Are you sure? This order will be canceled and a new one will be created instead
@@ -122,7 +123,6 @@ manage_sales_orders:
             confirmation_to_send_email: Are you sure you want to send order email to customer?
             #not verified
             authorizenet_online_invoice_error: //li[normalize-space(@class)='error-msg' and contains(.,'Order was not released from holding status.')]
-
             invalid_card_number: "%fieldXpath%/following-sibling::*[text()='Please enter a valid credit card number.' and not(contains(@style,'display: none;'))]"
             failed_print_packingslips: //li[normalize-space(@class)='error-msg' and contains(.,'There are no printable documents related to selected orders.')]
             failed_print_credit_memos: //li[normalize-space(@class)='error-msg' and contains(.,'There are no printable documents related to selected orders.')]
@@ -176,16 +176,18 @@ create_order_for_new_customer:
                             qty_to_add: %productXpath%//input[@name='qty']
                         links:
                             configure: %productXpath%//a[text()='Configure']
+                            disabled_configure: %productXpath%//a[text()='Configure'][@disabled]
                 -
                     order_items_ordered: &orderItemsOrdered
                         xpath: //div[@id='order-items']
                         pageelements:
                             product_table_head: //table[@class='data order-tables']/thead
                             product_table_tfoot: //*[@id='order-items_grid']/table/tfoot
-                            product_line:  //table[@class='data order-tables']/tbody
+                            product_line: //table[@class='data order-tables']/tbody
                         buttons:
                             add_products: //button[span='Add Products']
                             configure: //tr[td/@class='first'][contains(.,'%sku%')]//button[span='Configure']
+                            disabled_configure: //tr[td/@class='first'][contains(.,'%sku%')]//button[span='Configure'][@disabled]
                             update_items_and_quantity: //button[contains(span, 'Update Items and Qty')]
                         checkboxes:
                             custom_price_use: //tr[td/@class='first'][contains(.,'%sku%')]//div[label='Custom Price*']/input
@@ -359,8 +361,8 @@ create_order_for_new_customer:
                         radiobuttons:
                             option_radio: //dt[contains(label,'%optionTitle%')]//following-sibling::dd[1]//li[contains(span/label,'%optionParameter%')]//input[@type='radio']
                         buttons:
-                            ok: //button[contains(span, 'OK')]
-                            cancel: //button[span[contains(text(),'Cancel')]]
+                            composite_configure_ok: //button[contains(span, 'OK')]
+                            composite_configure_cancel: //button[span[contains(text(),'Cancel')]]
                 -
                     gift_options: &giftMessage
                         xpath: //div[div/h4[contains(text(),'Gift Options for')]]
@@ -442,7 +444,7 @@ create_order_for_existing_customer:
 
 view_order:
     mca: sales_order/view/order_id/%id%/
-    title: %order_id% / Orders / Sales / Magento Admin
+    title: %elementTitle% / Orders / Sales / Magento Admin
     uimap:
         form: &orderView
             tabs:
@@ -480,7 +482,7 @@ view_order:
                                         gift_options: //tbody[@class][tr[contains(.,'%sku%')]]//a[text()='Gift Options']
                                     pageelements:
                                         product_table_head: //table[@class='data order-tables']/thead
-                                        product_line:  //table[@class='data order-tables']/tbody
+                                        product_line: //table[@class='data order-tables']/tbody
                             -
                                 gift_options: *giftMessage
                             -
