--- a/fixture/default/core/Mage/Home/uimap/frontend/Home.yml
+++ b/fixture/default/core/Mage/Home/uimap/frontend/Home.yml
@@ -59,7 +59,7 @@ home_page:
 
 test_page:
     mca: %url_key%
-    title: %page_title%
+    title: %elementTitle%
     uimap:
         form:
             fieldsets:
