--- a/fixture/default/core/Mage/PayPal/uimap/paypal_sandbox/PayPalSandbox.yml
+++ b/fixture/default/core/Mage/PayPal/uimap/paypal_sandbox/PayPalSandbox.yml
@@ -27,7 +27,7 @@
 ---
 paypal_sandbox:
     mca: cgi-bin/webscr?cmd=_partner-onboard-flow&onboarding_token=%anyValue%
-    title: %pageTitle%
+    title: %elementTitle%
     uimap: &paypalSandbox
         form:
             fieldsets:
@@ -62,5 +62,5 @@ paypal_sandbox_get_started:
 
 paypal_sandbox_account:
     mca: us/cgi-bin/webscr?cmd=_flow&SESSION=%anyValue%&dispatch=%anyValue%
-    title: %pageTitle%
+    title: %elementTitle%
     uimap: *paypalSandbox
