--- a/fixture/default/core/Mage/Product/uimap/admin/Product.yml
+++ b/fixture/default/core/Mage/Product/uimap/admin/Product.yml
@@ -584,7 +584,7 @@ duplicated_configurable_product:
 # Edit Product page
 edit_product:
     mca: catalog_product/edit/id/%id%/
-    title: %productName% / Manage Products / Catalog / Magento Admin
+    title: %elementTitle% / Manage Products / Catalog / Magento Admin
     uimap: &editProduct
         form:
             fieldsets:
@@ -686,12 +686,12 @@ edit_product:
 
 edit_saved_product:
     mca: catalog_product/edit/id/%id%/back/edit/tab/%tab%
-    title: %productName% / Manage Products / Catalog / Magento Admin
+    title: %elementTitle% / Manage Products / Catalog / Magento Admin
     uimap: *editProduct
 
 edit_product_save_and_continue:
     mca: catalog_product/edit/id/%id%/back/edit/tab/product_info_tabs_group_%tabId%/
-    title: %productName% / Manage Products / Catalog / Magento Admin
+    title: %elementTitle% / Manage Products / Catalog / Magento Admin
     uimap: *editProduct
 
 create_empty_simple_from_configurable:
