[HELPER] remove native Selenium methods

--- a/fixture/default/core/Mage/_uimapIncludes/frontend.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/frontend.yml
@@ -66,6 +66,7 @@ frontend_header:
                             table_line_index_cell_index_product_name: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]//*[@class='product-name']"
                             element_index: "%elementXpath%[%index%]"
                             element_not_disabled_style: "%elementXpath%[not(contains(@style,'display:') and contains(@style,'none'))]"
+                            element_not_disabled: "%elementXpath%[not(@disabled)]"
         messages:
             success_registration: //li[normalize-space(@class)='success-msg' and contains(.,'Thank you for registering with')]
             general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
