[UIMAP] fixed typos in uimaps

--- a/fixture/default/core/Mage/Shipment/uimap/admin/Shipment.yml
+++ b/fixture/default/core/Mage/Shipment/uimap/admin/Shipment.yml
@@ -29,7 +29,7 @@
 # Sales Shipments page
 manage_sales_shipments:
     mca: sales_shipment/
-    click_xpath: //ul[@id='nav']//a[contains(@href, 'sales_invoice/')]
+    click_xpath: //ul[@id='nav']//a[contains(@href, '/sales_shipment/')]
     title: Shipments / Sales / Magento Admin
     uimap:
         form: &salesShipments
