--- a/fixture/default/core/Mage/CreditMemo/uimap/admin/CreditMemo.yml
+++ b/fixture/default/core/Mage/CreditMemo/uimap/admin/CreditMemo.yml
@@ -61,7 +61,7 @@ manage_sales_credit_memos:
             confirmation_to_procced: This will create an offline refund. To create an online refund, open an invoice and create credit memo for it. Do you wish to proceed?
             success_creating_creditmemo: //li[normalize-space(@class)='success-msg' and contains(.,'The credit memo has been created.')]
             failed_authorize_online_refund: "//li[normalize-space(@class)='error-msg' and contains(.,'Gateway error: The referenced transaction does not meet the criteria for issuing a credit. If the invoice was created offline, try creating an offline creditmemo.')]"
-
+            order_id: "//*[contains(@class,'head-sales-order')][contains(text(), 'Order #')]"
 
 create_credit_memo:
     mca: sales_order_creditmemo/new/order_id/%id%/
