--- a/fixture/default/core/Mage/_uimapIncludes/frontend.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/frontend.yml
@@ -46,6 +46,7 @@ frontend_header:
                         xpath:
                         pageelements:
                             qtyElementsInTable: //td[@class='pager']//span[contains(@id,'total-count')]
+                            qty_elements_in_specific_table: "%tableHeadXpath%//td[@class='pager']//span[contains(@id,'total-count')]"
                             fieldNameWithValidationMessage: "/ancestor::*[1]/preceding-sibling::*[1]/descendant-or-self::*[string-length(text())>1]"
                             dropdown_option: "%dropdownXpath%//option"
                             dropdown_option_text: "%dropdownXpath%//option[normalize-space(text())='%optionText%']"
@@ -59,14 +60,19 @@ frontend_header:
                             table_column_index: "%tableHeadXpath%//th[%index%]"
                             table_column_index_colspan: "%tableHeadXpath%//th[%index%][@colspan]"
                             table_head_first: "%tableHeadXpath%/tr[contains(@class,'first')]"
+                            table_head_cell_index_option_text: "//tr[@class='filter']/th[%cellIndex%]//option[normalize-space(text())='%optionText%']"
                             table_line_cell_index: "%tableLineXpath%//td[%cellIndex%]"
                             table_line_index_cell_index: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]"
                             table_line_index_cell_index_with_input_value: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]/input[@value]"
                             table_line_index_cell_index_options: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]//*[@class='item-options']"
                             table_line_index_cell_index_product_name: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]//*[@class='product-name']"
+                            table_line_input:  "%tableLineXpath%/input"
                             element_index: "%elementXpath%[%index%]"
                             element_not_disabled_style: "%elementXpath%[not(contains(@style,'display:') and contains(@style,'none'))]"
+                            element_with_disabled_style: "%elementXpath%[contains(@style,'display:') and contains(@style,'none')]"
                             element_not_disabled: "%elementXpath%[not(@disabled)]"
+                            element_with_class_active: "%elementXpath%[contains(@class,'active')]"
+                            element_with_class_not_active: "%elementXpath[not(contains(@class,'active'))]%"
         messages:
             success_registration: //li[normalize-space(@class)='success-msg' and contains(.,'Thank you for registering with')]
             general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
