--- a/fixture/default/core/Mage/StoreManagement/uimap/admin/StoreManagement.yml
+++ b/fixture/default/core/Mage/StoreManagement/uimap/admin/StoreManagement.yml
@@ -46,6 +46,8 @@ manage_stores:
                             website_name: //input[@name='website_title']
                             store_name: //input[@name='group_title']
                             store_view_name: //input[@name='store_title']
+                        pageelements:
+                            cell_store_link: //table[@id]/tbody/tr[%rowIndex%]/td[%cellIndex%]/a
         buttons:
             create_website: //button[span='Create Website']
             create_store: //button[span='Create Store']
