--- a/fixture/default/core/Mage/CatalogPriceRule/uimap/admin/CatalogPriceRule.yml
+++ b/fixture/default/core/Mage/CatalogPriceRule/uimap/admin/CatalogPriceRule.yml
@@ -116,9 +116,13 @@ add_new_rule:
                                         condition_attribute: //ul[@id='conditions__%condition%__children']/li[%key%]/span[.//select[contains(@name,'attribute')]]/a
                                         open_chooser: //ul[@id='conditions__%condition%__children']/li[%key%]//img[contains(@src,'rule_chooser_trigger')]
                                         confirm_choice: //ul[@id='conditions__%condition%__children']/li[%key%]//img[contains(@src,'rule_component_apply')]
-                                        root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
-                                        sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                                        expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                        rule_condition_item_root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
+                                        rule_condition_item_sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                                        rule_condition_item_expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                    pageelements:
+                                        rule_condition_item_category_text: %categoryXpath%/div/a/span
+                                        rule_condition_item_category_index_text: %categoryXpath%[%index%]/div/a/span
+                                        rule_condition_item_category_index_link: %categoryXpath%[%index%]/div/a
                                     dropdowns:
                                         select_condition_new_child: /li[%key%]//span[contains(.//@src,'rule_component_add')]//select
                                         select_condition_operator: /li[%key%]/span[contains(.//@name,'operator')]//select
