--- a/fixture/default/core/Mage/Category/uimap/admin/Category.yml
+++ b/fixture/default/core/Mage/Category/uimap/admin/Category.yml
@@ -43,11 +43,21 @@ manage_categories:
                         links:
                             collapse_all: //a[text()='Collapse All']
                             expand_all: //a[text()='Expand All']
-                            root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
-                            sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                            expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                            select_category_root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
+                            select_category_sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                            select_category_expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                        pageelements:
+                            select_category_category_text: %categoryXpath%/div/a/span
+                            select_category_category_index_text: %categoryXpath%[%index%]/div/a/span
+                            select_category_category_index_link: %categoryXpath%[%index%]/div/a
                         dropdowns:
                             choose_store_view: //select[@id='store_switcher']
+                -
+                    category_container:
+                        xpath: //*[@id='category-edit-container']
+                        pageelements:
+                            category_name_header: //h3
+                            created_category_name_header: //h3[not(contains(text(),'New'))]
             tabs:
                 -
                     general_information:
