--- a/fixture/default/core/Mage/CmsStaticBlock/uimap/admin/CmsStaticBlock.yml
+++ b/fixture/default/core/Mage/CmsStaticBlock/uimap/admin/CmsStaticBlock.yml
@@ -163,9 +163,13 @@ edit_cms_static_block:
                     select_category:
                         xpath: //div[@id='widget-chooser' and //div[text()='Select Category...']]
                         links:
-                            root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
-                            sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                            expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                            select_category_root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
+                            select_category_sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                            select_category_expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                        pageelements:
+                            select_category_category_text: %categoryXpath%/div/a/span
+                            select_category_category_index_text: %categoryXpath%[%index%]/div/a/span
+                            select_category_category_index_link: %categoryXpath%[%index%]/div/a
                         buttons:
                             close_category_insertion: //div[@id='widget-chooser_close']
                 -
@@ -183,11 +187,14 @@ edit_cms_static_block:
                             search: //button[span='Search']
                             close_product_insertion: //div[@id='widget-chooser_close']
                         links:
-                            root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
-                            sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                            expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                            select_product_root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
+                            select_product_sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                            select_product_expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
                         pageelements:
                             product_table_head: //div[@id='widget-chooser_content']//table/thead/tr[@class='headings']
+                            select_product_category_text: %categoryXpath%/div/a/span
+                            select_product_category_index_text: %categoryXpath%[%index%]/div/a/span
+                            select_product_category_index_link: %categoryXpath%[%index%]/div/a
                 -
                     file_insertion:
                         xpath: //div[@id='browser_window' and //div[text()='Insert File...']]
