--- a/fixture/default/core/Mage/CmsWidget/uimap/admin/CmsWidget.yml
+++ b/fixture/default/core/Mage/CmsWidget/uimap/admin/CmsWidget.yml
@@ -129,9 +129,13 @@ add_widget_options:
                                         open_chooser: //div[@id='%layout%_ids_%index%']//a[@title='Open Chooser']
                                         apply: //div[@id='%layout%_ids_%index%']//a[@title='Apply']
 #                                        select_category_anchor: //div[@id='page_group_container_%index%']//a[span='%categoryName%']
-                                        root_category: %widgetParam%//ul/div/li[contains(div/a/span,'%rootName%')]
-                                        sub_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                                        expand_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                        layout_updates_body_root_category: %widgetParam%//ul/div/li[contains(div/a/span,'%rootName%')]
+                                        layout_updates_body_sub_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                                        layout_updates_body_expand_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                    pageelements:
+                                        layout_updates_body_category_text: %categoryXpath%/div/a/span
+                                        layout_updates_body_category_index_text: %categoryXpath%[%index%]/div/a/span
+                                        layout_updates_body_category_index_link: %categoryXpath%[%index%]/div/a
 #                                    checkboxes:
 #                                        select_category_non_anchor: //div[@id='page_group_container_%index%']//div[./a[span='%categoryName%']]//input[@type='checkbox']
                                     buttons:
@@ -206,9 +210,13 @@ add_widget_options:
                                 select_category:
                                     xpath: //div[@id='widget-chooser' and //div[text()='Select Category...']]
                                     links:
-                                        root_category: %widgetParam%//ul/div/li[contains(div/a/span,'%rootName%')]
-                                        sub_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                                        expand_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                        select_category_root_category: %widgetParam%//ul/div/li[contains(div/a/span,'%rootName%')]
+                                        select_category_sub_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                                        select_category_expand_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                    pageelements:
+                                        select_category_category_text: %categoryXpath%/div/a/span
+                                        select_category_category_index_text: %categoryXpath%[%index%]/div/a/span
+                                        select_category_category_index_link: %categoryXpath%[%index%]/div/a
                                     buttons:
                                         close_category_insertion: //div[@id='widget-chooser_close']
                             -
@@ -226,11 +234,14 @@ add_widget_options:
                                         search: //button[span='Search']
                                         close_product_insertion: //div[@id='widget-chooser_close']
                                     links:
-                                        root_category: %widgetParam%//ul/div/li[contains(div/a/span,'%rootName%')]
-                                        sub_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                                        expand_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                        select_product_root_category: %widgetParam%//ul/div/li[contains(div/a/span,'%rootName%')]
+                                        select_product_sub_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                                        select_product_expand_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
                                     pageelements:
                                         product_table_head: //div[@id='widget-chooser_content']//table/thead/tr[@class='headings']
+                                        select_product_category_text: %categoryXpath%/div/a/span
+                                        select_product_category_index_text: %categoryXpath%[%index%]/div/a/span
+                                        select_product_category_index_link: %categoryXpath%[%index%]/div/a
         buttons:
             back: //button[span='Back']
             reset: //button[span='Reset']
