--- a/fixture/default/core/Mage/Product/uimap/admin/Product.yml
+++ b/fixture/default/core/Mage/Product/uimap/admin/Product.yml
@@ -305,9 +305,13 @@ new_product:
                                 select_category:
                                     xpath: //div[contains(div/div/h4,'Product Categories')]
                                     links:
-                                        root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
-                                        sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
-                                        expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                        select_category_root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
+                                        select_category_sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
+                                        select_category_expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
+                                    pageelements:
+                                        select_category_category_text: %categoryXpath%/div/a/span
+                                        select_category_category_index_text: %categoryXpath%[%index%]/div/a/span
+                                        select_category_category_index_link: %categoryXpath%[%index%]/div/a
                 -
                     related: &relatedProductsTab
                         xpath: //a[@title='Related Products']/span
