--- a/fixture/default/core/Mage/_uimapIncludes/admin.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/admin.yml
@@ -82,6 +82,7 @@ admin_header:
                             element_not_disabled: "%elementXpath%[not(@disabled)]"
                             element_with_class_active: "%elementXpath%[contains(@class,'active')]"
                             element_with_class_not_active: "%elementXpath%[not(contains(@class,'active'))]"
+                            element_by_id: "//*[@id='%elementId%']"
         messages:
             general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
             general_success: "//*/descendant::*[normalize-space(@class)='success-msg'][string-length(.)>1]"
