--- a/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
@@ -26,6 +26,13 @@
 ---
 paypal_developer:
     uimap:
+        form:
+            fieldsets:
+                -
+                    general_elements:
+                        xpath:
+                        pageelements:
+                            navigation_menu: //*[@id='nav-menu']
         messages:
             general_validation: "//*[@id='alert_content']/span[@class='details']"
             general_success: "//*[@id='alert_content']/span[@class='message']"
