Fixed MAGETWO-1623: Fix all possible fails of functional tests builds on bamboo on allocated time - [UIMAP]: Fixed UIMAP for CMSWidget which is used in widget creation functional tests

--- a/dev/tests/functional/fixture/default/core/Mage/CmsWidget/uimap/admin/CmsWidget.yml
+++ b/dev/tests/functional/fixture/default/core/Mage/CmsWidget/uimap/admin/CmsWidget.yml
@@ -57,7 +57,7 @@ create_cms_widget:
                                     xpath: //div[@id='base_fieldset']
                                     dropdowns:
                                         type: //select[@name='type']
-                                        package_theme: //select[@name='package_theme']
+                                        design_package_theme: //select[@name='package_theme']
                                     buttons:
                                         continue: //button[span='Continue']
 
