[TEST] [UIMAP] [HELPER] [DATA] MAGETWO-1554 Customer Address Attributes - Implemented creating, validation and deleting all types of attributes

--- a/dev/tests/functional/fixture/community2/core/Mage/AdminUser/uimap/admin/AdminUsers.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/AdminUser/uimap/admin/AdminUsers.yml
@@ -33,7 +33,7 @@ manage_roles:
     click_xpath: //ul[@id='nav']//a[contains(@href, 'user_role')]
     
 # 'New Role' page
-new_role:
+new_role:-
     mca: user_role/editrole/
     uimap:
         form: 
