Squashed commit of the following:
commit ae9a4084494596606ec2bbaa8bd34fc31b3d6cd8
Author: Artem Shugayev <ashugayev@ebay.com>
Date:   Tue Jun 26 11:54:56 2012 +0300

    [CONFIG] Fixed config.yml

commit cab670f5aaf243466258350a4fd4cef6039e2bfb
Author: Vik <vgumeniuk@ebay.com>
Date:   Tue Jun 26 11:38:05 2012 +0300

    [UIMAP] Change description

commit 0e6a1e5dbb972ecc5d90c88cdac21fa4fbcd9d2d
Author: Vik <vgumeniuk@ebay.com>
Date:   Tue Jun 26 11:06:13 2012 +0300

    [UIMAP] Change description

commit ab2c04d6977dd26b3cda15abcbb0e46777542a0a
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Mon Jun 25 14:35:33 2012 +0300

    [TEST][UIDATA][UIMAP] Final commit. Add TestLink case-description. Edit all depended uimaps according to code style. Rename MenuElementData to MenuElement

commit dca081066d42a510613a3126be650cf838ebf2c7
Author: iryna.lagno <ilagno@ebay.com>
Date:   Mon Jun 25 12:42:43 2012 +0300

    [UIMAP][DATA][DRAFT] MAGETWO-1721. Add changes to MenuElementsData.yml(enterprise)

commit d526c0a98914bb06da38a25b446b9873a9a1486b
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Mon Jun 25 12:22:20 2012 +0300

    [UIDATA] fix, uncoment required nods

commit be9cd611a737d3a1c89e95ffd1742ec07c44bd4a
Merge: ec7ccc8 84cf84f
Author: Vik <vgumeniuk@ebay.com>
Date:   Mon Jun 25 11:46:58 2012 +0300

    Merge remote-tracking branch 'origin/KIEV-QA-FOLKS-S3-MAGETWO-1721' into KIEV-QA-FOLKS-S3-MAGETWO-1721

    Conflicts:
    	dev/tests/functional/fixture/enterprise2/core/Mage/AdminMenu/data/MenuElementsData.yml

commit ec7ccc88890ad260dd32a68ea6438d6809965e1a
Author: Vik <vgumeniuk@ebay.com>
Date:   Mon Jun 25 11:46:01 2012 +0300

    [UIMAP] Fixed System.yml

commit 84cf84f80483d92761f2cbe4d13e7ccfb7b5fd5f
Author: Sergii Dzhepa <sdzhepa@ebay.com>
Date:   Mon Jun 25 11:13:13 2012 +0300

    [UIDATA] fix, uncoment required nods

commit 2e6d4458c70ae3ad58c93d787445d9171189f342
Author: Vik <vgumeniuk@ebay.com>
Date:   Mon Jun 25 10:29:38 2012 +0300

    [UIMAP] Uncoment

--- a/dev/tests/functional/fixture/community2/core/Mage/Customer/uimap/admin/Customers.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/Customer/uimap/admin/Customers.yml
@@ -37,3 +37,9 @@ create_customer:
                                 account_info:
                                     fields:
                                         custom_attribute: //input[@id='_account%attribute_name%']
+
+# 'Online Customers' Page
+online_customers:
+    mca: customer_online/
+    click_xpath: //ul[@id='nav']//a[contains(@href, 'customer_online/')]
+    title: Online Customers / Customers / Magento Admin
